kube/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petto-app-deployment
  labels:
    app: petto-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petto
  template:
    metadata:
      labels:
        app: petto
    spec:
      containers:
        - name: petto-app
          image: petto-app-image
          ports:
            - containerPort: 80
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["./cloud_sql_proxy",
                    "-instances=petto-dev-269707:us-central1:petto-db=tcp:5432"]
