kube/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petto-app-service
spec:
  selector:
    app: petto
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
