kube/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: petto-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: petto-app-service
              servicePort: 80
